k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: sharai-project
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80        # Порт, который будет слушать сервис внутри кластера
      targetPort: 8000 # Порт, который открыт в самом контейнере FastAPI
  type: ClusterIP
